# Ros2_Uarm_Visual

./: .gitignore  README.md  RUN_REAL_ROBOT.md  frames_2025-11-23_20.52.00.gv  simple_control.py  test_movement.py
pro_moveit_config/: CMakeLists.txt  package.xml
pro_moveit_config/config/: from launch import LaunchDescription.py  move_group_params.yaml  ompl_planning.yaml  swiftpro.srdf  swiftpro.xml  swiftpro_simple.srdf
pro_moveit_config/launch/: _tmp_clean_demo.launch.py  demo.launch.py  demo2.launch.py  fake_moveit_controller_manager.launch.py  move_group.launch.py  moveit.rviz  moveit_rviz.launch.py  ompl_planning_pipeline.launch.py  planning_context.launch.py  planning_pipeline.launch.py  run_benchmark_ompl.launch.py  sensor_manager.launch.py  setup_assistant.launch  swiftpro_moveit_controller_manager.launch.py  swiftpro_moveit_sensor_manager.launch.py  trajectory_execution.launch.py  warehouse_settings.launch.py
pro_moveit_config/legacy_launch/: moveit_rviz.launch
pro_moveit_config/scripts/: pub_joint_states.py
scripts/: jointstate_bridge.py  start_sim.sh  start_write.sh  wait_and_run_read.sh
swift_moveit_config/: CMakeLists.txt  package.xml
swift_moveit_config/config/: ompl_planning.yaml
swift_moveit_config/launch/: default_warehouse_db.launch  demo.launch.py  move_group.launch.py  moveit_rviz.launch  setup_assistant.launch
swiftpro/: CMakeLists.txt  package.xml
swiftpro/include/serial/: serial.h
swiftpro/launch/: combined.launch.py  minimal.launch.py  real_robot.launch.py  sim.launch.py
swiftpro/rviz/: swiftpro_default.rviz
swiftpro/scripts/: sim_publisher.py
swiftpro/src/: swiftpro_moveit_node_ros2.cpp  swiftpro_read_node_ros2.cpp  swiftpro_rviz_node_ros2.cpp  swiftpro_write_node_ros2.cpp
swiftpro/urdf/: pro_model.urdf  pro_model.xacro  swift_model.xacro
