<?xml version="1.0"?>
<package format="3">
  <name>swift_moveit_config</name>
  <version>0.3.0</version>
  <description>MoveIt2 configuration for swiftpro (ROS2 Humble)</description>
  <author email="roger@ufactory.cc">roger</author>
  <maintainer email="roger@ufactory.cc">roger</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- MoveIt2 與必要執行期依賴 -->
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>swiftpro</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <build_export_depend>swiftpro</build_export_depend>
  <exec_depend>tf2_ros</exec_depend>

  <member_of_group>ros2</member_of_group>
</package>
