<?xml version="1.0"?>
<package format="3">
  <name>swiftpro</name>
  <version>0.1.0</version>
  <description>SwiftPro driver &amp; messages for ROS2 Humble</description>
  <maintainer email="example@ufactory.cc">maintainer</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>rosidl_default_generators</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
</package>
